force-app/main/default/objects/QuoteLineItem/fields/Calc_PlusNet_SubscriptionId__c.field-meta.xml
<CustomField>
    <fullName>Calc_PlusNet_SubscriptionId__c</fullName>
    <formula>IF(Product2.vlocity_cmt__IsNotAssetizable__c = false || Product2.ProductCode=&apos;PNET-B2B-CON-COS&apos;,IF(PlusNet_SubscriptionId__c = null, Id,PlusNet_SubscriptionId__c),null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calc PlusNet Subscription Id</label>
    <type>Text</type>
</CustomField>