force-app/main/default/objects/QuoteLineItem/fields/PlusNet_End_Of_Minimum_Contract_Term__c.field-meta.xml
<CustomField>
    <fullName>PlusNet_End_Of_Minimum_Contract_Term__c</fullName>
    <formula>DATETIMEVALUE(ADDMONTHS(vlocity_cmt__ServiceDate__c,Quote.Contract.ContractTerm) - 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PlusNet End Of Minimum Contract Term</label>
    <type>Date</type>
</CustomField>