force-app/main/default/objects/QuoteLineItem/fields/PlusNet_Latest_Cancellation_Date__c.field-meta.xml
<CustomField>
    <fullName>PlusNet_Latest_Cancellation_Date__c</fullName>
    <formula>ADDMONTHS(PlusNet_End_Of_Minimum_Contract_Term__c, - PlusNet_Period_Of_Notice__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PlusNet Latest Cancellation Date</label>
    <type>Date</type>
</CustomField>