force-app/main/default/objects/QuoteLineItem/fields/PlusNet_Period_Of_Notice__c.field-meta.xml
<CustomField>
    <fullName>PlusNet_Period_Of_Notice__c</fullName>
    <formula>vlocity_cmt__Product2Id__r.PlusNet_Period_Of_Notice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PlusNet Period Of Notice</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>